Fix exception scope verification failures in runtime/Map* files. https://bugs.webkit.org/show_bug.cgi?id=165050

Reviewed by Saam Barati.

* runtime/MapConstructor.cpp:
(JSC::constructMap):
* runtime/MapIteratorPrototype.cpp:
(JSC::MapIteratorPrototypeFuncNext):
* runtime/MapPrototype.cpp:
(JSC::privateFuncMapIteratorNext):



Canonical link: https://commits.webkit.org/182731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209026 268f45cc-cd09-0410-ab3c-d52691b4dbfc